feat: initial support for sql-json-path query

--- a/src/common/function/Cargo.toml
+++ b/src/common/function/Cargo.toml
@@ -61,6 +61,7 @@ serde_json.workspace = true
 session.workspace = true
 snafu.workspace = true
 sql.workspace = true
+sql-json-path = { version = "0.1", default-features = false }
 store-api.workspace = true
 table.workspace = true
 uddsketch = { git = "https://github.com/GreptimeTeam/timescaledb-toolkit.git", rev = "84828fe8fb494a6a61412a3da96517fc80f7bb20" }
