fix: adjust repartition flow and compaction read compatibility
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -82,6 +82,7 @@ sqlx = { workspace = true, features = [
     "chrono",
 ] }
 standalone.workspace = true
+store-api.workspace = true
 substrait.workspace = true
 table.workspace = true
 tempfile.workspace = true
