test: update repartition map
Signed-off-by: discord9 <discord9@163.com>

--- a/tests-integration/Cargo.toml
+++ b/tests-integration/Cargo.toml
@@ -94,6 +94,7 @@ uuid.workspace = true
 zstd.workspace = true
 
 [dev-dependencies]
+common-procedure-test.workspace = true
 common-wal = { workspace = true, features = ["testing"] }
 datafusion.workspace = true
 datafusion-expr.workspace = true
