chore: per review
Signed-off-by: discord9 <discord9@163.com>

--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -319,6 +319,8 @@ interval = "10m"
 ## Whether GC is enabled. Default to false. Need to be the same with datanode's `mito.gc.enable`
 ## If set to false, no GC will be performed
 enable = false
+## Cooldown period between GC operations on the same region.
+gc_cooldown_period = "5m"
 
 ## The logging options.
 [logging]
