feat: verify partition rule
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/src/metric-engine/Cargo.toml
+++ b/src/metric-engine/Cargo.toml
@@ -50,6 +50,8 @@ mito2 = { workspace = true, features = ["test"] }
 common-wal = { workspace = true }
 criterion = { version = "0.4", features = ["async", "async_tokio"] }
 mur3 = "0.1"
+common-function = { workspace = true }
+partition = { workspace = true }
 
 [[bench]]
 name = "bench_tsid_generator"
