feat: use arrow-pg for postgres data encoding (#7591)
* feat: use arrow-pg for encode_row

* refactor: remove bytea and datetime module

* feat: port more encodings to arrow-pg

* feat: implement intervalstyle

* chore: format

* chore: remove error that is no longer used

* chore: use released arrow-pg

* Apply suggestions from code review

Co-authored-by: LFC <990479+MichaelScofield@users.noreply.github.com>

---------

Co-authored-by: LFC <990479+MichaelScofield@users.noreply.github.com>

--- a/src/servers/Cargo.toml
+++ b/src/servers/Cargo.toml
@@ -23,6 +23,7 @@ api.workspace = true
 arrow.workspace = true
 arrow-flight.workspace = true
 arrow-ipc.workspace = true
+arrow-pg = "0.11"
 arrow-schema.workspace = true
 async-trait.workspace = true
 auth.workspace = true
@@ -87,8 +88,8 @@ opentelemetry-proto.workspace = true
 operator.workspace = true
 otel-arrow-rust.workspace = true
 parking_lot.workspace = true
-pg_interval = "0.4"
-pgwire = { version = "0.37", default-features = false, features = [
+pg_interval = { version = "0.5.2", package = "pg_interval_2" }
+pgwire = { version = "0.37.3", default-features = false, features = [
     "server-api-ring",
     "pg-ext-types",
 ] }
