fix: gc update repart map properly (#7606)
* feat: update repart map

Signed-off-by: discord9 <discord9@163.com>

* fix: table id write lock

Signed-off-by: discord9 <discord9@163.com>

* chore: default value

Signed-off-by: discord9 <discord9@163.com>

* chore: config

Signed-off-by: discord9 <discord9@163.com>

* test: update repartition map

Signed-off-by: discord9 <discord9@163.com>

* fix: empty file ref set

Signed-off-by: discord9 <discord9@163.com>

* chore: per review

Signed-off-by: discord9 <discord9@163.com>

* chore: properly log error

Signed-off-by: discord9 <discord9@163.com>

---------

Signed-off-by: discord9 <discord9@163.com>

--- a/config/datanode.example.toml
+++ b/config/datanode.example.toml
@@ -672,6 +672,21 @@ data_freeze_threshold = 32768
 ## Only available for `partition_tree` memtable.
 fork_dictionary_bytes = "1GiB"
 
+[region_engine.mito.gc]
+## Whether GC is enabled. Need to be the same with metasrv's `gc.enable` or unexpected behavior will occur
+enable = false
+
+## Lingering time before deleting files.
+## Should be long enough to allow long running queries to finish.
+## If set to None, then unused files will be deleted immediately.
+lingering_time = "1m"
+
+## Lingering time before deleting unknown files(files with undetermine expel time).
+## expel time is the time when the file is considered as removed, as in removed from the manifest.
+## This should only occur rarely, as manifest keep tracks in `removed_files` field
+## unless something goes wrong.
+unknown_file_lingering_time = "1h"
+
 [[region_engine]]
 ## Enable the file engine.
 [region_engine.file]
