feat: v2 schema handling
Signed-off-by: jeremyhi <fengjiachun@gmail.com>

--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -65,6 +65,8 @@ store-api.workspace = true
 table.workspace = true
 tokio.workspace = true
 tracing-appender.workspace = true
+url.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
 common-meta = { workspace = true, features = ["testing"] }
@@ -72,4 +74,3 @@ common-test-util.workspace = true
 common-version.workspace = true
 serde.workspace = true
 tempfile.workspace = true
-url.workspace = true
