--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -119,7 +119,7 @@ jobs:
       - name: Build greptime binaries
         shell: bash
         # `cargo gc` will invoke `cargo build` with specified args
-        run: cargo gc -- --bin greptime --bin sqlness-runner --features "pg_kvbackend,mysql_kvbackend"
+        run: cargo gc -- --bin greptime --bin sqlness-runner --features "pg_kvbackend,mysql_kvbackend,vector_index"
       - name: Pack greptime binaries
         shell: bash
         run: |
