--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "1.0.0-beta.4"
+version = "1.0.0-rc.1"
 edition = "2024"
 license = "Apache-2.0"
 
