--- a/src/partition/Cargo.toml
+++ b/src/partition/Cargo.toml
@@ -10,6 +10,7 @@ workspace = true
 [dependencies]
 api.workspace = true
 async-trait.workspace = true
+common-base.workspace = true
 common-error.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
@@ -19,6 +20,7 @@ datafusion-expr.workspace = true
 datafusion-physical-expr.workspace = true
 datatypes.workspace = true
 itertools.workspace = true
+moka = { workspace = true, features = ["future"] }
 serde.workspace = true
 serde_json.workspace = true
 session.workspace = true
