feat: implements anomaly_score_iqr, anomaly_score_mad and anomaly_score_zscore functions
Signed-off-by: Dennis Zhuang <killme2008@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -132,6 +132,7 @@ datafusion-datasource = "51.0"
 datafusion-expr = "51.0"
 datafusion-functions = "51.0"
 datafusion-functions-aggregate-common = "51.0"
+datafusion-functions-window-common = "51.0"
 datafusion-optimizer = "51.0"
 datafusion-orc = { git = "https://github.com/GreptimeTeam/datafusion-orc.git", rev = "35f2e04bf81f2ab7b6f86c0450d6a77b7098d43e" }
 datafusion-pg-catalog = "0.13"
@@ -334,6 +335,7 @@ datafusion-common = { git = "https://github.com/GreptimeTeam/datafusion.git", re
 datafusion-expr = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
 datafusion-functions = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
 datafusion-functions-aggregate-common = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
+datafusion-functions-window-common = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
 datafusion-optimizer = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
 datafusion-physical-expr = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
 datafusion-physical-expr-common = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
