--- a/src/common/event-recorder/Cargo.toml
+++ b/src/common/event-recorder/Cargo.toml
@@ -15,6 +15,7 @@ common-time.workspace = true
 humantime.workspace = true
 humantime-serde.workspace = true
 itertools.workspace = true
+jsonb.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 snafu.workspace = true
