ci: run repartition fuzz target with dedicated local-wal GC config
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -316,6 +316,13 @@ jobs:
             minio: true
             kafka: true
             values: "with-remote-wal.yaml"
+        include:
+          - target: "fuzz_repartition_table"
+            mode:
+              name: "Local WAL Repartition GC"
+              minio: true
+              kafka: false
+              values: "with-minio-repartition-gc.yaml"
     steps:
       - name: Remove unused software
         run: |
