feat: support scan bench
Signed-off-by: evenyag <realevenyag@gmail.com>

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -30,6 +30,7 @@ base64.workspace = true
 cache.workspace = true
 catalog.workspace = true
 chrono.workspace = true
+datafusion-physical-plan.workspace = true
 either = "1.15"
 clap.workspace = true
 cli.workspace = true
@@ -63,6 +64,7 @@ futures.workspace = true
 human-panic = "2.0"
 humantime.workspace = true
 lazy_static.workspace = true
+log-store.workspace = true
 meta-client.workspace = true
 meta-srv.workspace = true
 metric-engine.workspace = true
