feat: implement copy to stdout

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -344,6 +344,7 @@ datafusion-sql = { git = "https://github.com/GreptimeTeam/datafusion.git", rev =
 datafusion-substrait = { git = "https://github.com/GreptimeTeam/datafusion.git", rev = "7143b2fc4492a7970774583ed0997a459f3e5c05" }
 sqlparser = { git = "https://github.com/GreptimeTeam/sqlparser-rs.git", rev = "d7d95a44889e099e32d78e9bad9bc00598faef28" }                           # on branch v0.59.x
 pgwire = { git = "https://github.com/sunng87/pgwire.git", branch = "feature/copy-encoding" }
+arrow-pg = { git = "https://github.com/datafusion-contrib/datafusion-postgres.git", branch = "feature/arrow-pg-copy-encoder"}
 
 [profile.release]
 debug = 1
