--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -31,6 +31,8 @@ cache.workspace = true
 catalog.workspace = true
 chrono.workspace = true
 datafusion-physical-plan.workspace = true
+datafusion.workspace = true
+datafusion-common.workspace = true
 either = "1.15"
 clap.workspace = true
 cli.workspace = true
@@ -94,6 +96,7 @@ tokio.workspace = true
 toml.workspace = true
 tonic.workspace = true
 tracing-appender.workspace = true
+sqlparser.workspace = true
 
 [target.'cfg(unix)'.dependencies]
 pprof = { version = "0.14", features = [
