--- a/src/common/grpc/Cargo.toml
+++ b/src/common/grpc/Cargo.toml
@@ -35,7 +35,7 @@ tower.workspace = true
 vec1 = "1.12"
 
 [dev-dependencies]
-criterion = "0.4"
+criterion.workspace = true
 hyper-util = { workspace = true, features = ["tokio"] }
 rand.workspace = true
 tempfile.workspace = true
