--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -30,6 +30,9 @@ base64.workspace = true
 cache.workspace = true
 catalog.workspace = true
 chrono.workspace = true
+datafusion-physical-plan.workspace = true
+datafusion.workspace = true
+datafusion-common.workspace = true
 either = "1.15"
 clap.workspace = true
 cli.workspace = true
@@ -63,6 +66,7 @@ futures.workspace = true
 human-panic = "2.0"
 humantime.workspace = true
 lazy_static.workspace = true
+log-store.workspace = true
 meta-client.workspace = true
 meta-srv.workspace = true
 metric-engine.workspace = true
@@ -91,6 +95,7 @@ tokio.workspace = true
 toml.workspace = true
 tonic.workspace = true
 tracing-appender.workspace = true
+sqlparser.workspace = true
 
 [target.'cfg(unix)'.dependencies]
 pprof = { version = "0.14", features = [
