chore: add metasrv config ser trait
Signed-off-by: shuiyisong <xixing.sys@gmail.com>

--- a/src/common/options/Cargo.toml
+++ b/src/common/options/Cargo.toml
@@ -8,6 +8,7 @@ license.workspace = true
 common-grpc.workspace = true
 humantime-serde.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 
 [lints]
 workspace = true
