--- a/src/plugins/Cargo.toml
+++ b/src/plugins/Cargo.toml
@@ -15,11 +15,13 @@ cli.workspace = true
 common-base.workspace = true
 common-error.workspace = true
 common-meta.workspace = true
+common-options.workspace = true
 datanode.workspace = true
 flow.workspace = true
 frontend.workspace = true
 meta-client.workspace = true
 meta-srv.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 snafu.workspace = true
 standalone.workspace = true
