--- a/src/datanode/Cargo.toml
+++ b/src/datanode/Cargo.toml
@@ -65,6 +65,7 @@ servers.workspace = true
 session.workspace = true
 snafu.workspace = true
 store-api.workspace = true
+strum.workspace = true
 table.workspace = true
 tokio.workspace = true
 toml.workspace = true
