--- a/src/meta-srv/Cargo.toml
+++ b/src/meta-srv/Cargo.toml
@@ -88,6 +88,7 @@ toml.workspace = true
 tonic.workspace = true
 tower.workspace = true
 tower-http.workspace = true
+tracing.workspace = true
 typetag.workspace = true
 url = "2.3"
 uuid.workspace = true
