chore: fix typo
Signed-off-by: WenyXu <wenymedia@gmail.com>

--- a/.github/actions/setup-greptimedb-cluster/with-minio-repartition-gc.yaml
+++ b/.github/actions/setup-greptimedb-cluster/with-minio-repartition-gc.yaml
@@ -15,7 +15,7 @@ datanode:
     global_rt_size = 4
     compact_rt_size = 2
 
-    [region_engine]
+    [[region_engine]]
     [region_engine.mito]
     [region_engine.mito.gc]
     enable = true
