--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -430,6 +430,24 @@ jobs:
           name: fuzz-tests-kind-logs-${{ matrix.mode.name }}-${{ matrix.target }}
           path: /tmp/kind
           retention-days: 3
+      - name: Collect monitor dumps
+        if: success()
+        shell: bash
+        env:
+          GT_FUZZ_NS: my-greptimedb
+          GT_FUZZ_CLUSTER: my-greptimedb
+          GT_MONITOR_HTTP_LOCAL_PORT: 14000
+          GT_MONITOR_ARTIFACT_DIR: /tmp/fuzz-monitor-dumps
+        run: |
+          bash .github/scripts/collect-fuzz-monitor-artifacts.sh
+      - name: Upload monitor dumps
+        if: success()
+        uses: actions/upload-artifact@v4
+        with:
+          name: fuzz-tests-monitor-dumps-${{ matrix.mode.name }}-${{ matrix.target }}
+          path: /tmp/fuzz-monitor-dumps
+          if-no-files-found: warn
+          retention-days: 3
       - name: Delete cluster
         if: success()
         shell: bash
@@ -572,11 +590,29 @@ jobs:
         shell: bash
         run: |
           kubectl describe pod -n my-greptimedb
+      - name: Collect monitor dumps
+        if: failure()
+        shell: bash
+        env:
+          GT_FUZZ_NS: my-greptimedb
+          GT_FUZZ_CLUSTER: my-greptimedb
+          GT_MONITOR_HTTP_LOCAL_PORT: 14000
+          GT_MONITOR_ARTIFACT_DIR: /tmp/fuzz-monitor-dumps
+        run: |
+          bash .github/scripts/collect-fuzz-monitor-artifacts.sh
       - name: Export kind logs
         if: failure()
         shell: bash
         run: |
           kind export logs /tmp/kind
+      - name: Upload monitor dumps
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: fuzz-tests-monitor-dumps-${{ matrix.mode.name }}-${{ matrix.target }}
+          path: /tmp/fuzz-monitor-dumps
+          if-no-files-found: warn
+          retention-days: 3
       - name: Upload logs
         if: failure()
         uses: actions/upload-artifact@v4
