--- a/src/meta-client/Cargo.toml
+++ b/src/meta-client/Cargo.toml
@@ -15,6 +15,7 @@ common-error.workspace = true
 common-grpc.workspace = true
 common-macro.workspace = true
 common-meta.workspace = true
+common-options.workspace = true
 common-telemetry.workspace = true
 futures.workspace = true
 futures-util.workspace = true
