fix: add api as dev-dependency to cmd for clippy
Signed-off-by: evenyag <realevenyag@gmail.com>

--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -106,6 +106,7 @@ pprof = { version = "0.14", features = [
 tikv-jemallocator = "0.6"
 
 [dev-dependencies]
+api.workspace = true
 client = { workspace = true, features = ["testing"] }
 common-test-util.workspace = true
 common-version.workspace = true
