chore(version): refresh build info on demand
This commit introduces a `refresh_build_info` feature to the `common-version` crate. Build timestamps and version strings are now only populated when this feature is explicitly enabled, which helps in achieving more stable and reproducible build outputs by default.

The CI/CD workflows for Linux, macOS, and Windows have been updated to enable this feature for release builds to ensure that the final artifacts still contain the necessary versioning information.

Signed-off-by: Lei, HUANG <mrsatangel@gmail.com>

--- a/.github/actions/build-linux-artifacts/action.yml
+++ b/.github/actions/build-linux-artifacts/action.yml
@@ -56,7 +56,7 @@ runs:
       uses: ./.github/actions/build-greptime-binary
       with:
         base-image: ubuntu
-        features: servers/dashboard
+        features: servers/dashboard,common-version/refresh_build_info
         cargo-profile: ${{ inputs.cargo-profile }}
         artifacts-dir: greptime-linux-${{ inputs.arch }}-${{ inputs.version }}
         version: ${{ inputs.version }}
@@ -75,7 +75,7 @@ runs:
       if: ${{ inputs.arch == 'amd64' && inputs.dev-mode == 'false' }} # Builds greptime for centos if the host machine is amd64.
       with:
         base-image: centos
-        features: servers/dashboard
+        features: servers/dashboard,common-version/refresh_build_info
         cargo-profile: ${{ inputs.cargo-profile }}
         artifacts-dir: greptime-linux-${{ inputs.arch }}-centos-${{ inputs.version }}
         version: ${{ inputs.version }}
